--- a/index.html
+++ b/index.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-     
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
   <body>
     <div id="map"></div>
-
-
     <script>
-    //   let map;
-    //   function initMap() {
-    //     map = new google.maps.Map(document.getElementById('map'), {
-    //       center: {lat: 52.3, lng:  -4.0},
-    //       zoom: 8.3
-    //     });
-    //     let cardiff= new google.maps.LatLng(51.4816, -3.1791)
-    //   let cardiffmarker = new google.maps.Marker({position: myLatlng, title:"Hello World!"});
-    //     // To add the marker to the map, call setMap();
-    //     marker.setMap(map);
-    //   }
-        function initMap(){
-        var myLatlng = new google.maps.LatLng(52.3, -4);
-        var mapOptions = {
-            zoom: 8.3,
-            center: myLatlng
-        }
-        var map = new google.maps.Map(document.getElementById("map"), mapOptions);
-
-        var marker = new google.maps.Marker({
-            position: myLatlng,
-            title: "Hello World!"
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 8.2,
+          center: new google.maps.LatLng( 52.2, -3.6,),
+          mapTypeId: 'terrain'
         });
 
-        // To add the marker to the map, call setMap();
-        marker.setMap(map);
-    }
+        // Create a <script> tag and set the data as the source.
+        var script = document.createElement('script');
+        script.src = 'data.js';
+        document.getElementsByTagName('head')[0].appendChild(script);
+      }
+
+      // Loop through the results array and place a marker for each
+      // set of coordinates.
+      window.DSWsite_callback = function(results) {
+        for (var i = 0; i < results.features.length; i++) {
+          var coords = results.features[i].geometry.coordinates;
+          var latLng = new google.maps.LatLng(coords[1],coords[0]);
+          var marker = new google.maps.Marker({
+            position: latLng,
+            map: map,
+            title: results.features[i].properties.name
+          });
+        }
+      }
     </script>
 
 
