new fix img path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
 
       
-      let telescopeIcon = src='img/smalltelescope.png'
+      let telescopeIcon = src='./img/smalltelescope.png'
 
       let star = {
     path: 'M 125,5 155,90 245,90 175,145 200,230 125,180 50,230 75,145 5,90 95,90 z',
