working modals logo and weblinks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="header">
-    <a href="/index.html"><img src='./img/dsw.jpg' alt="logo" /></a>
+    <a href="./index.html"><img src='./img/dsw.jpg' alt="logo" /></a>
     <a href="#default" class="logo">Dark Sky Wales Locations</a>
     <div class="header-right">
       <a class="active" href="#home">Home</a>
