--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Dark Sky Wales Locations</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -10,15 +14,15 @@
 </head>
 
 <body>
-  <div class="header">
+  <!-- <div class="header">
     <a href="./index.html"><img src='./img/dsw.jpg' alt="logo" /></a>
     <a href="#default" class="logo">Dark Sky Wales Locations</a>
     <div class="header-right">
       <a class="active" href="#home">Home</a>
       <a href="#weather">Weather</a>
-      <!-- <a href="#about">About</a> -->
+      <a href="#about">About</a>
     </div>
-  </div>
+  </div> -->
 
   <div id="map"></div>
 
@@ -314,8 +318,8 @@
             ]
           }
         ],
-        zoom: 8.2,
-        center: new google.maps.LatLng(52.2, -3.6),
+        zoom: 7.5,
+        center: new google.maps.LatLng(52.1, -3.9),
         mapTypeControl: false,
         streetViewControl: false,
         zoomControl: true,
